# SpaceCLIGame

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
docs/: 01_PRD.md  02_HLD.md  03_LLD.md  04_DATABASE.md  05_GAME_DESIGN.md  06_ARCHITECTURE.md  07_TASK_QUEUE.md  08_EVENT_SYSTEM.md  09_API.md  10_TEST_PLAN.md  11_ROADMAP.md  12_CONTRIBUTING.md
scripts/: init_commits.ps1
src/: __main__.py  main.py
src/building/: manager.py
src/cli/: formatter.py  shell.py
src/core/: engine.py  resources.py
src/database/: connection.py
src/event/: bus.py  handlers.py  models.py
src/scheduler/: algorithms.py  core.py  models.py
src/worker/: manager.py  thread.py
tests/integration/: test_event_flow.py
tests/simulation/: test_stress.py
tests/unit/: test_scheduler.py
