[tool.poetry]
name = "colony-os"
version = "1.0.0"
description = "A terminal-based colony management simulation game."
authors = ["ashmitt <ashmitrai0905@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
typer = "^0.12.3"
rich = "^13.7.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.4.8"
black = "^24.4.2"
mypy = "^1.10.0"

[tool.poetry.scripts]
colony-os = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "W", "I"]
lint.ignore = ["E501"]
